# wasmcraft

./: .gitignore  Cargo.toml  README.md  foo.txt
src/: cmd_info.rs  code_emitter.rs  convert.sh  datapack.rs  lib.rs  main.rs  mir.rs  state.rs  wasm.rs
src/intrinsic/: ashr_i64.mcfunction  clz.mcfunction  clz_inner.mcfunction  ctz_inner.mcfunction  load_byte.mcfunction  load_halfword_unaligned.mcfunction  load_word_unaligned.mcfunction  lshr.mcfunction  mul_32_to_64 copy.mcfunction  setptr.mcfunction  shl_64.mcfunction  store_byte.mcfunction  store_halfword_unaligned.mcfunction  store_word_unaligned.mcfunction  xor.mcfunction
src/intrinsic/i64divrem/: __wasm0_0.mcfunction  __wasm0_1.mcfunction  __wasm0_2.mcfunction  __wasm0_3.mcfunction  __wasm0_4.mcfunction  __wasm1_0.mcfunction  __wasm1_1.mcfunction  __wasm1_2.mcfunction  __wasm1_3.mcfunction  __wasm1_4.mcfunction  __wasm2_0.mcfunction  __wasm2_1.mcfunction  __wasm2_2.mcfunction  __wasm2_3.mcfunction  __wasm2_4.mcfunction  __wasm3_0.mcfunction  __wasm3_1.mcfunction  __wasm3_2.mcfunction  __wasm3_3.mcfunction  __wasm3_4.mcfunction
src/intrinsic/lshr/: inner.mcfunction
src/intrinsic/memcpy/: inner.mcfunction  next_byte.mcfunction
src/state/: const_prop.rs  dead_writes.rs  stack_drops.rs
tests/: arithmetic.wasm  arithmetic.wat  arithmetic2.c  arithmetic2.wasm  arithmetic2.wat  block_return.wasm  block_return.wat  for_loop.c  for_loop.wasm  for_loop.wat  memtest.wasm  memtest.wat  nested_loop.c  nested_loop.wasm  nested_loop.wat  return_42.c  return_42.wasm  return_42.wat  stack_elim.wasm  stack_elim.wat
