[package]
name = "wasmcraft"
version = "0.1.0"
authors = ["Carson Swoveland <sciencedude2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "wasmcraft-bin"

[lib]
path = "src/lib.rs"

[dependencies]
wasmparser = "0.78"
serde_json = "1.0"
once_cell = "1.8"
datapack_vm = { path = "../../datapack_vm" }
datapack_common = { path = "../datapack_common" }

#[dev-dependencies]
#wasmtime = "0.28"
